[package]
name = "ledgeracio"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPLv3+"

[features]
insecure_software_keystore = []
allowlist = []
default = ["allowlist"]

[dependencies]
# TODO: get this into the mainline release
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", branch = "staking" }
structopt = { version = "0.3.16" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
frame-support = { version = "2.0.0-rc5" }
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
ed25519-bip32 = "0.3.1"
futures = "0.3.5"
hmac = "0.8.1"
sha2 = "0.9.1"
tiny-bip39 = "0.7.3"
hex = "0.4.2"
thiserror = "1.0.20"

ledger-substrate = { git = "https://github.com/Zondax/ledger-substrate-rs" }
zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs" }
clap = "2.33.2"
log = "0.4.11"
env_logger = "0.7.1"
ed25519-dalek = "1.0.0-pre.4"
rand = "0.7.3"
blake2b_simd = "0.5.10"
base64 = "0.12.3"
regex = "1.3.9"
sp-arithmetic = "2.0.0-rc5"

[profile.release]
lto = "fat" #TODO: why "fat" and not "thin"?
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

# TODO: remove patches or, if inevitable, open branch and pin specific revision?
# TODO: If patches are necessary, consider adding a comment explaining why they
# are needed and what needs to change for them to be removed.
[patch.crates-io]
frame-metadata = { git = "https://github.com/paritytech/substrate", package = "frame-metadata" }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
sp-version = { git = "https://github.com/paritytech/substrate", package = "sp-version" }
pallet-indices = { git = "https://github.com/paritytech/substrate", package = "pallet-indices" }
sp-rpc = { git = "https://github.com/paritytech/substrate", package = "sp-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", package = "sc-rpc-api" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sp-transaction-pool" }
sp-std = { git = "https://github.com/paritytech/substrate" }
application-crypto = { git = "https://github.com/paritytech/substrate", package = "sp-application-crypto", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate" }
pallet-im-online = { git = "https://github.com/paritytech/substrate" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate" }
pallet-staking = { git = "https://github.com/paritytech/substrate" }
# sc-service = { git = "https://github.com/paritytech/substrate" }
# sc-cli = { git = "https://github.com/paritytech/substrate" }
# sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
# jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee" }
