[package]
name = "ledgeracio"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPLv3+"

[features]
insecure_software_keystore = []
allowlist = []
default = ["allowlist"]

[dependencies]
substrate-subxt = { git = "https://github.com/DemiMarie/substrate-subxt.git", branch = "staking" }
structopt = "0.3.17"
codec = { package = "parity-scale-codec", version = "1.3.4" }
frame-support = "2.0.0-rc6"
async-std = { version = "1.6.3", features = ["attributes", "unstable"] }
ed25519-bip32 = "0.3.1"
futures = "0.3.5"
hmac = "0.9.0"
sha2 = "0.9.1"
tiny-bip39 = "0.7.3"
hex = "0.4.2"
thiserror = "1.0.20"

ledger-substrate = { git = "https://github.com/Zondax/ledger-substrate-rs.git" }
zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs.git" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs.git" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs.git" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs.git" }
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.7.1"
ed25519-dalek = "1.0.0"
rand = "0.7.3"
blake2b_simd = "0.5.10"
base64 = "0.12.3"
regex = "1.3.9"
sp-arithmetic = "2.0.0-rc6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

[patch.crates-io]
# These patches are to ensure that the RPC call metadata matches what is
# deployed on-chain.
#
# There is currently no guarantee that code deployed on-chain matches a
# crates.io release.  Generally, it is better to use a revision that is too new
# than one that is too old.  Therefore, I (Demi) chose to use git dependencies,
# so that `cargo update` will always fetch the latest version.
#
# They can be removed when I no longer need to worry about arbitrary git commits
# being deployed on-chain.  Ideally, Polkadot will always run the latest stable
# release, but Kusama might run any version, so git dependencies might be needed
# for quite a while.
frame-metadata = { git = "https://github.com/paritytech/substrate.git" }
frame-support = { git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git" }
sp-version = { git = "https://github.com/paritytech/substrate.git" }
pallet-indices = { git = "https://github.com/paritytech/substrate.git" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git" }
sp-core = { git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git" }
sp-std = { git = "https://github.com/paritytech/substrate.git" }
application-crypto = { git = "https://github.com/paritytech/substrate.git", package = "sp-application-crypto" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git" }
