[package]
name = "ledgeracio"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPLv3+"
default-run = "ledgeracio"

[dependencies]
substrate-subxt = { git = "https://github.com/DemiMarie/substrate-subxt.git", rev = "70bc8499ac5023fdcd4fa391d7db7481b3698600" }
structopt = "0.3.17"
codec = { package = "parity-scale-codec", version = "1.3.4" }
frame-support = "2.0.0-rc6"
async-std = { version = "1.6.3", features = ["attributes", "unstable"] }
ed25519-bip32 = "0.3.1"
futures = "0.3.5"
hmac = "0.9.0"
sha2 = "0.9.1"
tiny-bip39 = "0.7.3"
hex = "0.4.2"
thiserror = "1.0.20"

ledger-substrate = { git = "https://github.com/DemiMarie/ledger-substrate-rs.git", branch = "fix-compile" }
zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs.git" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs.git" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs.git" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs.git" }
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.7.1"
ed25519-dalek = "1.0.0"
rand = "0.7.3"
blake2b_simd = "0.5.10"
base64 = "0.12.3"
regex = "1.3.9"
sp-arithmetic = "2.0.0-rc6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

[[bin]]
name = "ledgeracio-allowlist"

[[bin]]
name = "ledgeracio"
